Improve README, add JDK16+ instuctions